fix issue with truncate that was messing up the story cards

--- a/app/assets/stylesheets/stories.scss
+++ b/app/assets/stylesheets/stories.scss
@@ -18,6 +18,10 @@ mark {
   background-color: lightyellow;
 }
 
+#elastic-search-bar {
+  margin: 2%;
+}
+
 /* Desktop */
 @media (min-width: 768px) {}
 
